--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,12 +1,16 @@
 .map-container {
     width: 100%;
+    z-index: 0;
 }
 
 .map-frame {
     border: 0.8px solid green;
     height: 100%;
+    z-index: 0;
 
 }
 
 #map {
-    width: 100% !important;}
+    width: 100% !important;
+    z-index: 0;
+}
