--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -6,6 +6,9 @@ nav {
     background-color: #008000;
     margin: 0px !important; 
     height: 10%;
+    position: sticky;
+    top:0;
+    z-index: 10;
 }
 
 .brand-logo {
