--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,9 +2,9 @@
     <img src= "/assets/imgs/inovaccs.jpg" class="brand-logo">
 
     <ul>
-        <li routerLinkActive="active"><a routerLink="/">Home</a></li>
-        <li routerLinkActive="active"><a routerLink="/servicos">Serviços</a></li>
-        <li routerLinkActive="active"><a routerLink="/quemsomos">Quem Somos</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="#servicos">Serviços</a></li>
+        <li><a href="#quemsomos">Quem Somos</a></li>
     </ul>
 
     <img src="/assets/imgs/ccs50.jpg" class="brand-logo"> 
