--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,39 @@
-<app-map></app-map>>
+<div id="mapa">
+    <app-map></app-map>
+</div>
+
+<div id="servicos">
+    <div class="body-servicos">
+        <div class="menu-aside">
+            <h2>ACESSO RÁPIDO</h2>
+            <ul>
+                <li><a href="#CENABIO">CENABIO</a></li>
+                <li><a href="#CENABIO">CENABIO</a></li>
+                <li><a href="#CENABIO">CENABIO</a></li>
+            </ul>
+        </div>
+        <div class="texto-servicos">
+            <h2>CENABIO</h2>
+            <h3>Unidade de Imageamento de Pequenos Animais</h3>
+            <p class="p-topico">Descrição:</p>
+            <p class="p-texto">Plataformas Multi-usuário disponíveis nesta unidade: citometria de fluxo</p>
+    
+        </div>
+    </div>    
+</div>
+
+<div id="quemsomos">
+    <div class="body-quemsomos">
+    <div class="texto-qs">
+        <h1>Coordenação de Inovação Tecnológica</h1>
+
+        <p>A Coordenação de Inovação Tecnológica busca trabalhar os temas de inovação e empreendedorismo e viabilizar a propagação da cultura de inovação no CCS.</p>
+
+        <p>Apesar de receber o nome de “Tecnológica”, a Coordenação entende que inovações no ensino, organizacionais ou de outros tipos são de grande relevância e devem ser incentivadas também. Com esse objetivo, a Coordenação se aliou à Agência UFRJ de Inovação para criar o Inova-CCS, que atua na organização de seminários, workshops e eventos para a comunidade do CCS na realização de atividades de treinamento e capacitação em Propriedade Intelectual e Inovação voltadas para professores, técnico-administrativos e estudantes; no mapeamento de expertises de grupos de pesquisa em diferentes subáreas; no atendimento e orientação de membros da comunidade do CCS que desejam criar inovação, depositar patente e interagir com a iniciativa ou criar startups.</p>
+    </div>
+    <div class="imagens-qs">
+        <img src="/assets/imgs/minerva.png" class="brand-logo-qs">
+        <img src="/assets/imgs/labnet.png" class="brand-logo-qs">
+    </div>
+    </div>
+</div>
