--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -3,8 +3,8 @@
 
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#quemsomos">Quem Somos</a></li>
+        <li><a href="main/#servicos">Serviços</a></li>
+        <li><a href="main/#quemsomos">Quem Somos</a></li>
     </ul>
 
     <img src="/assets/imgs/ccs50.jpg" class="brand-logo"> 
